--- a/app/src/main/res/drawable/bg_topic_title.xml
+++ b/app/src/main/res/drawable/bg_topic_title.xml
@@ -2,9 +2,13 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#B6B6B6"/>
+    <gradient android:startColor="#FFFEFE"
+        android:endColor="#6C6C6C"
+        android:centerColor="#FFFFFF"
+        android:angle="270"/>
     <corners
         android:bottomLeftRadius="10dp"
         android:bottomRightRadius="10dp"/>
+
 
 </shape>
