--- a/app/src/main/res/layout/item_topic.xml
+++ b/app/src/main/res/layout/item_topic.xml
@@ -4,49 +4,48 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="10dp"
-        android:orientation="vertical">
+        android:layout_marginHorizontal="4dp"
+        android:layout_marginVertical="10dp">
 
-        <androidx.cardview.widget.CardView
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/card1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="180dp"
             app:cardCornerRadius="10dp"
+            android:theme="@style/Theme.MaterialComponents.Light"
+            android:background="#C5C5C5"
             android:elevation="10dp"
-            android:layout_marginHorizontal="7dp"
-            android:layout_marginTop="15dp">
+            android:layout_marginHorizontal="3dp"
+            android:layout_marginTop="10dp">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
             <ImageView
                 android:id="@+id/topicImage"
                 android:layout_width="match_parent"
                 android:layout_height="130dp"
-                android:scaleType="fitXY"/>
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:elevation="10dp"
-            android:layout_marginHorizontal="20dp">
+                android:scaleType="centerCrop"/>
 
             <TextView
                 android:id="@+id/topicTitle"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="@drawable/bg_topic_title"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginHorizontal="10dp"
                 android:text="title"
                 android:textSize="25sp"
                 android:textStyle="bold|italic"
-                android:gravity="center_vertical"/>
+                android:gravity="bottom"/>
 
-        </androidx.cardview.widget.CardView>
+            </RelativeLayout>
 
+        </com.google.android.material.card.MaterialCardView>
 
-
-    </LinearLayout>
+    </RelativeLayout>
 
 </RelativeLayout>
