--- a/app/src/main/res/layout/activity_ar.xml
+++ b/app/src/main/res/layout/activity_ar.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ar_model.Models_Activity"
+    tools:context=".modelsActivity.Models_Activity"
     android:background="#efefef">
 
     <androidx.cardview.widget.CardView
