--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,15 +5,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".splash.SplashActivity">
+    tools:context=".splash.SplashActivity"
+    android:background="@drawable/bg_splash">
+
+    <ImageView
+        android:id="@+id/imageViewicon"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="250dp"
+        android:layout_centerHorizontal="true"
+        app:srcCompat="@drawable/sanvardhicon" />
+
+    <ImageView
+        android:id="@+id/imageViewtitle"
+        android:layout_width="200dp"
+        android:layout_height="90dp"
+        android:layout_below="@+id/imageViewicon"
+        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"
+        app:srcCompat="@drawable/sanvardhtitle" />
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Splash"
-        android:textSize="40sp"
-        android:textStyle="bold"
-        android:textColor="#000000" />
+        android:layout_below="@+id/imageViewtitle"
+        android:layout_centerHorizontal="true"
+        android:textSize="17sp"
+        android:layout_margin="5dp"
+        android:textColor="#ffffff"
+        android:text="@string/nav_header_subtitle" />
 
 </RelativeLayout>
