--- a/app/src/main/res/layout/item_model.xml
+++ b/app/src/main/res/layout/item_model.xml
@@ -16,14 +16,15 @@
             android:layout_height="180dp"
             app:cardCornerRadius="10dp"
             android:theme="@style/Theme.MaterialComponents.Light"
-            android:background="#C5C5C5"
+            android:background="@color/colorPrimary"
             android:elevation="10dp"
             android:layout_marginHorizontal="3dp"
             android:layout_marginTop="10dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@color/colorPrimary">
 
                 <ImageView
                     android:id="@+id/modelImage"
@@ -43,6 +44,7 @@
                     android:layout_marginHorizontal="10dp"
                     android:text="title"
                     android:textSize="18sp"
+                    android:textColor="#efefef"
                     android:textStyle="bold|italic"
                     android:gravity="bottom"/>
 
