--- a/app/src/main/res/layout/item_topic.xml
+++ b/app/src/main/res/layout/item_topic.xml
@@ -17,13 +17,14 @@
             app:cardCornerRadius="10dp"
             android:theme="@style/Theme.MaterialComponents.Light"
             android:background="#C5C5C5"
-            android:elevation="10dp"
+            android:elevation="20dp"
             android:layout_marginHorizontal="3dp"
             android:layout_marginTop="10dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@color/colorPrimary">
 
             <ImageView
                 android:id="@+id/topicImage"
@@ -39,6 +40,7 @@
                 android:layout_marginHorizontal="10dp"
                 android:text="title"
                 android:textSize="25sp"
+                android:textColor="#efefef"
                 android:textStyle="bold|italic"
                 android:gravity="bottom"/>
 
