--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,4 +16,9 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="AppThemeS" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:itemBackground">#ffffff</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+
 </resources>
