--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,9 +8,55 @@
     android:layout_height="match_parent"
     tools:context=".ui.home.HomeFragment">
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/aa1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="10dp"
+        app:cardCornerRadius="5dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_alignParentTop="true"
+            android:padding="5dp">
+
+            <TextView
+                android:id="@+id/aa2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginHorizontal="5dp"
+                android:text="Signed In as :"
+                android:textAllCaps="false"
+                android:textColor="#0f0f0f"
+                android:fontFamily="sans-serif-medium"
+                android:textStyle="normal"
+                android:textSize="17sp" />
+
+            <TextView
+                android:id="@+id/userName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/aa2"
+                android:text="user"
+                android:textAllCaps="false"
+                android:textColor="@color/colorPrimaryDark"
+                android:fontFamily="sans-serif-medium"
+                android:textStyle="normal"
+                android:textSize="17sp" />
+
+        </RelativeLayout>
+
+
+    </androidx.cardview.widget.CardView>
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/aa1"
         android:background="@color/colorPrimaryLight"
         android:id="@+id/topicsRecyclerView"
         android:layout_marginHorizontal="5dp"
